primera version de fabrikat

--- a/index.html
+++ b/index.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<title>Fabrikat</title>
 	<meta charset="utf-8">
-	<meta name="author" content="JALP Laveriano">
-	<meta name="description" content="fabrikat"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<meta name="description" content="fabrikat, la mejor solución en maquinaria"/>
+	<meta name="keywords" content="fabrikat, maquinaria, plataformas subterráneas" />
+	<meta name="author" content="JALP Laveriano">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
+	<link rel="icon" href="/favicon.ico">
 </head>
 <body>
-
 	<header>
 		<div class="logo">
-			<a href="/"><img src="img/logo.png" title="fabrikat" alt="fabrikat"/></a>
+			<a href="/"><img src="images/logo.png" title="fabrikat" alt="fabrikat"/></a>
 		</div>
-
 		<div id="menu_icon"></div>
 		<nav>
 			<ul>
 				<li><a href="/" class="selected">Home</a></li>
-				<li><a href="#">Nosotros</a></li>
-				<li><a href="#">Servicios</a></li>
+				<li><a href="nosotros.html">Nosotros</a></li>
+				<li><a href="servicios.html">Servicios</a></li>
 				<li><a href="#">Productos</a></li>
 				<li><a href="#">Distribuidores</a></li>
-				<li><a href="contact.html">Contacto</a></li>
+				<li><a href="contacto.html">Contacto</a></li>
 			</ul>
-		</nav><!-- end navigation menu -->
-
+		</nav>
 		<div class="footer clearfix">
 			<div class="rights">
 				<p>Dirección: Calle el palmar nro. <br> 155 Dpto. 602 Salamanca – <br> Ate- Lima</p>
@@ -38,19 +36,53 @@
 			</div><!-- end rights -->
 			<ul class="social clearfix">
 				<li><a href="#" class="fb" data-title="Facebook"></a></li>
+				<li><a href="#" class="youtube" data-title="youtube"></a></li>
+				<li><a href="#" class="twitter" data-title="Twitter"></a></li>
+				<li><a href="#" class="linkedin" data-title="Linkedin"></a></li>
 				<li><a href="#" class="google" data-title="Google +"></a></li>
-				<li><a href="#" class="behance" data-title="Behance"></a></li>
-				<!--<li><a href="#" class="twitter" data-title="Twitter"></a></li>
-				<li><a href="#" class="dribble" data-title="Dribble"></a></li>-->
-				<li><a href="#" class="rss" data-title="RSS"></a></li>
-			</ul><!-- end social -->
-		</div ><!-- end footer -->
-	</header><!-- end header -->
-
+				<!--<li><a href="#" class="rss" data-title="RSS"></a></li>-->
+			</ul>
+		</div>
+	</header>
 	<section class="main clearfix">
-		<div class="contenido">
-			<img src="img/bg-home.jpg" class="media" alt="Fabrikant"/>
-		<div>
+		<div class="contenido bg-home">
+			<div class="info phome">
+				<article>
+					<h1 class="title" style="text-shadow:3px 2px 2px #000">LA MEJOR SOLUCIÓN EN MAQUINARIA </h1>
+					<p class="medio">
+						"INNOVADORAS PLATAFORMAS SUBTERRÁNEAS DE PERFORACIÓN PRODUCTIVAS, FUERTES, SIMPLES Y VERSÁTILES QUE OFRECEN EL MEJOR RETORNO DE SU INVERSIÓN."
+					</p>
+					<br>
+					<a href="#" class="more">MÁS INFORMACIÓN</a>
+				</article>
+				<article class="opt">
+					<div class="opciones">
+						<a href="#">
+							<div class="circulo">
+								<img src="images/producto.png" alt="producto">
+								<div>PRODUCTO</div>
+							</div>
+						</a>
+					</div>
+					<div class="opciones">
+						<a href="#">
+							<div class="circulo">
+								<img src="images/asesoria.png" alt="asesoria">
+								<div>ASESORÍA</div>
+							</div>
+						</a>
+					</div>
+					<div class="opciones">
+						<div class="circulo">
+						<a href="nosotros.html">
+							<img src="images/nosotros.png" alt="nosotros">
+							<div>NOSOTROS</div>
+						</div>
+						</a>
+					</div>
+				</article>
+			</div>
+		</div>
 	</section>
 </body>
 </html>
