--- a/nosotros.html
+++ b/nosotros.html
@@ -14,17 +14,17 @@
 <body>
 	<header>
 		<div class="logo">
-			<a href="/"><img src="images/logo.png" title="fabrikat" alt="fabrikat"/></a>
+			<a href="index.html"><img src="images/logo.png" title="fabrikat" alt="fabrikat"/></a>
 		</div>
 		<div id="menu_icon"></div>
 		<nav>
 			<ul>
-				<li><a href="/">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="#" class="selected">Nosotros</a></li>
 				<li><a href="servicios.html">Servicios</a></li>
 				<li><a href="#">Productos</a></li>
 				<li><a href="#">Distribuidores</a></li>
-				<li><a href="contacto.html">Contacto</a></li>
+				<li><a href="contact.php">Contacto</a></li>
 			</ul>
 		</nav>
 		<div class="footer clearfix">
